--- a/server/static/index.html
+++ b/server/static/index.html
@@ -2,23 +2,15 @@
 <html>
 	<head>
 		<title>Zig Wasm Test</title>
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<style>
-		body {
-			margin: 0;
-			background-color: #f0f0f0;
-			overflow: hidden;
-		}
-		canvas {
-			border: 1px solid black;
-			background-color: #ffffff;
-			display: block;
-			width: 100vw;
-			height: 100vh;
-		}
-		</style>
+		<div class="control-panel">
+			<button>Coworker</button>
+			<button>Zone</button>
+			<button>Access level</button>
+		</div>
 		<canvas id="node-canvas"></canvas>
-		<script src="main.js"></script>
+		<script src="main.js" type="module"></script>
 	</body>
 </html>
