feat: added edge types

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -5,49 +5,12 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<dialog id="create-zone-dialog">
-			<p>Create zone</p>
-			<form id="create-zone-form" method="dialog">
-				<label> Name:
-					<input type="text" name="name" />
-				</label>
+		<dialog id="create-edge-dialog">
+			<p>Choose connection type;</p>
+			<form id="create-edge-form" method="dialog">
 				<label> Type:
-					<select name="type" id="zone-type-select">
+					<select name="type" id="edge-type-select">
 					</select>
-				</label>
-				<div class="btn-container">
-					<button id="close">Create</button>
-				</div>
-			</form>
-		</dialog>
-
-		<dialog id="create-group-dialog">
-			<form id="create-group-form" method="dialog">
-				<label> Group name:
-					<input type="text" name="name" />
-				</label>
-				<div class="btn-container">
-					<button id="close">Create</button>
-				</div>
-			</form>
-		</dialog>
-
-		<dialog id="create-access-node-dialog">
-			<form id="create-access-node-form" method="dialog">
-				<label> Access level:
-					<select name="access_level" id="create-access-node-select">
-					</select>
-				</label>
-				<div class="btn-container">
-					<button id="close">Create</button>
-				</div>
-			</form>
-		</dialog>
-
-		<dialog id="create-coworker-dialog">
-			<form id="create-coworker-form" method="dialog">
-				<label> Name:
-					<input type="text" name="name" />
 				</label>
 				<div class="btn-container">
 					<button id="close">Create</button>
