feat: refactored run function into canvas gui driver class

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -18,8 +18,7 @@
 			</form>
 		</dialog>
 
-		<div id="control-panel" class="control-panel">
-		</div>
+		<div id="control-panel" class="control-panel"></div>
 		<canvas id="node-canvas"></canvas>
 		<script src="main.js" type="module"></script>
 	</body>
