feat: canvases are now divided into layers for better performance

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Graph editor</title>
+		<title>Koppla</title>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
@@ -22,7 +22,7 @@
 		</dialog>
 
 		<div id="control-panel" class="control-panel"></div>
-		<canvas id="node-canvas"></canvas>
+		<div id="canvas-container" class="canvas-container"></div>
 		<script src="main.js" type="module"></script>
 	</body>
 </html>
