feat!: refactored project structure + added build

--- a/apps/demo/index.html
+++ b/apps/demo/index.html
@@ -23,6 +23,7 @@
 
 		<div id="control-panel" class="control-panel"></div>
 		<div id="canvas-container" class="canvas-container"></div>
-		<script src="main.js" type="module"></script>
+		<script src="src/main.js" type="module"></script>
 	</body>
 </html>
+
